Complete Html Pages

--- a/app/views/html_pages/help.html.erb
+++ b/app/views/html_pages/help.html.erb
@@ -1,2 +1,4 @@
-<h1>HtmlPage#help</h1>
+<% provide(:title, "Help") %>
+
+<h1>Orbit Help Page</h1>
 <p>Find me in app/views/html_page/help.html.erb</p>
