--- a/app/views/html_pages/home.html.erb
+++ b/app/views/html_pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>HtmlPage#home</h1>
+<% provide(:title, "Home") %>
+
+<h1>Orbit Home Page</h1>
 <p>Find me in app/views/html_page/home.html.erb</p>
